--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -153,6 +153,7 @@
         <script src="js/tipousuario/edit.js" type="text/javascript"></script>
         <script src="js/tipousuario/plist.js" type="text/javascript"></script>
         <script src="js/tipousuario/remove.js" type="text/javascript"></script>
+        <script src="js/tipousuario/view.js" type="text/javascript"></script>
         <!-- Vendor 
         
         <script src="vendor/underscore/underscore-min.js" type="text/javascript"></script>
