--- a/src/main/webapp/js/usuario/newedit.html
+++ b/src/main/webapp/js/usuario/newedit.html
@@ -92,7 +92,7 @@ THE SOFTWARE.
             </div>            
         </div>
         
-        <div id="ciudad-group" class="form-group">
+       <!-- <div id="ciudad-group" class="form-group">
             <label class="col-sm-2 control-label" for="ciudad">Ciudad:</label>
             <div class="control col-sm-9">
                 <input ng-model="obj.ciudad" type="text" id="ciudad" class="form-control" name="ciudad" size="15" placeholder="ciudad">
@@ -111,7 +111,7 @@ THE SOFTWARE.
             <div class="control col-sm-9">
                 <input ng-model="obj.skin" type="text" id="skin" class="form-control" name="skin" size="15" placeholder="skin">
             </div>
-        </div>
+        </div>  -->
 
         <div class="control-group text-right">
             <div class="controls">
