--- a/src/main/webapp/js/system/menu.html
+++ b/src/main/webapp/js/system/menu.html
@@ -33,7 +33,7 @@ THE SOFTWARE.
       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"><i class="fa fa-icon-list-alt"></i>Principal<span class="caret"></span></a>
       <ul class="dropdown-menu" role="menu">
          <!--<li><a href="#/documento/plist"><i class="fa fa-fw fa-file-text"></i>Documentos</a></li>-->
-         <li><a href="#/usuario/plist"><i class="fa fa-fw fa-user"></i>Usuarios</a></li>
+        <!-- <li><a href="#/usuario/plist"><i class="fa fa-fw fa-user"></i>Usuarios</a></li>-->
          <li><a href="#/empresa/plist"><i class="fa fa-fw fa-building-o"></i>Empresa</a></li>
          <li><a href="#/centro/plist"><i class="fa fa-fw fa-building-o"></i>Centro</a></li>
       </ul>
