--- a/src/main/webapp/js/system/menu.html
+++ b/src/main/webapp/js/system/menu.html
@@ -35,7 +35,7 @@ THE SOFTWARE.
          <!--<li><a href="#/documento/plist"><i class="fa fa-fw fa-file-text"></i>Documentos</a></li>-->
         <!-- <li><a href="#/usuario/plist"><i class="fa fa-fw fa-user"></i>Usuarios</a></li>-->
          <li><a href="#/empresa/plist"><i class="fa fa-fw fa-building-o"></i>Empresa</a></li>
-         <li><a href="#/centro/plist"><i class="fa fa-fw fa-building-o"></i>Centro</a></li>
+         <li><a href="#/centro/plist"><i class="fa fa-fw fa-circle "></i>Centro</a></li>
       </ul>
    </li>
    <li class="dropdown">
