con tabla pagoafiliado

--- a/src/main/webapp/js/pago/plist.html
+++ b/src/main/webapp/js/pago/plist.html
@@ -225,7 +225,7 @@ THE SOFTWARE.
                     <td ng-show="visibles.id"  class="text-right">{{obj.id}}</td>           
                     <td ng-show="visibles.fpago">{{obj.fpago}}</td>                   
                     <td ng-show="visibles.id_afiliado">{{obj.obj_afiliado.nombre}}</td>
-                    <td ng-show="visibles.id_cuota">{{obj.obj_cuota.nombre}}</td>
+                    <td ng-show="visibles.id_cuota">{{obj.obj_cuota.tipocuota}}</td>
                     <td ng-show="visibles.id_recibo">{{obj.obj_recibo.descripcion}}</td>
                     
                     
