--- a/src/main/webapp/js/system/menu.html
+++ b/src/main/webapp/js/system/menu.html
@@ -44,6 +44,7 @@ THE SOFTWARE.
           <li><a href="#/afiliado/plist"><i class="fa fa-fw fa-male "></i>Afiliado</a></li>
           <li><a href="#/recibo/plist"><i class="fa fa-fw fa-credit-card "></i>Recibo</a></li>
           <li><a href="#/pago/plist"><i class="fa fa-fw fa-credit-card "></i>Pago</a></li>
+          <li><a href="#/pagoafiliado/plist"><i class="fa fa-fw fa-credit-card "></i>Pago Afiliado</a></li>
       </ul>
    </li>
    <!--<li class="dropdown">
