--- a/src/main/webapp/js/pago/edit.html
+++ b/src/main/webapp/js/pago/edit.html
@@ -54,7 +54,7 @@
                     <input ng-model="obj.obj_cuota.id" readonly="true" aria-describedby="basic-addon2" class="form-control" id="obj_cuota" name="obj_cuota" type="text" size="5" maxlength="5">
                                         <span class="input-group-addon">
                         <a href="#/cuota/view/{{obj.obj_cuota.id}}">
-                            <span>{{obj.obj_cuota.nombre}}</span>     
+                            <span>{{obj.obj_cuota.tipocuota}}</span>     
                         </a>     
                     </span>
                 </div>
