muestra pantalla pero sin nada

--- a/src/main/webapp/js/afiliado/view.html
+++ b/src/main/webapp/js/afiliado/view.html
@@ -60,7 +60,7 @@ THE SOFTWARE.
                     <tr>
                         <td>Cuota</td>
                         <td>
-                            <a href="#/cuota/view/{{bean.obj_cuota.id}}">{{bean.obj_cuota.nombre}}</a>
+                            <a href="#/cuota/view/{{bean.obj_cuota.id}}">{{bean.obj_cuota.tipocuota}}</a>
                         </td>
                     </tr> 
                     <tr>
