--- a/src/main/webapp/js/cuota/plist.html
+++ b/src/main/webapp/js/cuota/plist.html
@@ -145,7 +145,7 @@ THE SOFTWARE.
                                 <p></p>
                                 <form class="navbar-form navbar-right" role="form" action="Controller" method="post" id="cuotaForm">
                                     <input id="inputFiltervalueClient" class="form-control" name="filtervalue" type="text" size="20" maxlength="50" value="" width="100" style="width: 140px" placeholder="Valor" ng-model="clientFilterText">
-                                    <input type="submit" class="btn" id="btnFiltrarClient" name="btnFiltrarClient" value="Filtrar" ng-click="doClientFilter()">
+                                    <!--<input type="submit" class="btn" id="btnFiltrarClient" name="btnFiltrarClient" value="Filtrar" ng-click="doClientFilter()">-->
                                 </form>
                                 <p></p>
                             </div>
@@ -185,11 +185,11 @@ THE SOFTWARE.
                         <a ng-show="visibles.importe" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=desc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-down"></i></a>
                     </th>
                     
-                    <th>Acciones</th>
+                    <th>Mantenimiento</th>
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="obj in page">
+                <tr ng-repeat="obj in page|filter:clientFilterText">
                     <td ng-show="visibles.id"  class="text-right">{{obj.id}}</td>
                     <td ng-show="visibles.tipocuota">{{obj.tipocuota}}</td>
                     <td ng-show="visibles.importe">{{obj.importe}}</td>
