--- a/src/main/webapp/js/empresa/new.html
+++ b/src/main/webapp/js/empresa/new.html
@@ -78,9 +78,10 @@ THE SOFTWARE.
     </form>
     <div ng-show="result != null">    
         <div class="alert alert-success" ng-show="result.status == 200">
-            <h2>Se ha modificado el registro</h2>
-            <a ng-href="#/empresa/view/{{id}}">Ver el registro modificado</a>
-        </div>
+             
+            <h2>Se ha creado el registro</h2>
+            <a ng-href="#/empresa/view/{{result.message}}">Ver el registro creado</a>
+        
         <div class="alert alert-danger" ng-show="result.status != 200">
             <h2>Error al crear la empresa: no se ha creado</h2>
             <h3>Código: {{result.status}}</h3>
