--- a/src/main/webapp/js/empresa/plist.html
+++ b/src/main/webapp/js/empresa/plist.html
@@ -112,17 +112,10 @@ THE SOFTWARE.
                                 <p></p>
                                 <p>Campos visibles:</p>
                                 <input type="checkbox" ng-model="visibles.id" ng-checked="visibles.id">Ident.
-
                                 <input type="checkbox" ng-model="visibles.nombre" ng-checked="visibles.nombre">Nombre
                                 <input type="checkbox" ng-model="visibles.cif" ng-checked="visibles.alta">cif
                                 <input type="checkbox" ng-model="visibles.contacto" ng-checked="visibles.contacto">Contacto
-
-                                <!-- <input type="checkbox" ng-model="visibles.id_usuario" ng-checked="visibles.id_usuario">Usuario-->
-
                                 <input type="checkbox" ng-model="visibles.telefono" ng-checked="visibles.telefono">Telefono
-
-
-
                                 <p></p>
                             </div>
                         </div>
@@ -131,7 +124,7 @@ THE SOFTWARE.
                         <div class="row">
                             <div class="col-md-12">
                                 <p></p>
-                                
+                                <form class="navbar-form navbar-right" role="form" action="Controller" method="post" id="filterForm">
                                 <select id="selectFilter" class="form-control" name="filter" style="width: 160px" ng-model="filter">
                                     <option style="display:none">selecciona un campo</option>
                                     <option value="id">Identificador</option>
@@ -139,11 +132,6 @@ THE SOFTWARE.
                                     <option value="cif">Cif</option>
                                     <option value="contacto">Contacto</option>
                                     <option value="telefono">telefono</option>                                    
-
-
-
-
-
                                 </select>
                                 <select id="selectFilteroperator" class="form-control" name="filteroperator" width="80" style="width: 200px" ng-model="filteroperator">
                                     <option style="display:none">selecciona una operacion</option>
@@ -158,7 +146,7 @@ THE SOFTWARE.
                                 </select>
                                 <input id="inputFiltervalue" class="form-control" name="filtervalue" type="text" size="20" maxlength="50" value="" width="100" style="width: 140px" placeholder="Valor" ng-model="filtervalue">
                                 <input type="button" class="btn" id="btnFiltrar" name="btnFiltrar" value="Filtrar" ng-click="dofilter()" />
-
+                                </form>
                                 <p></p>
                             </div>
                         </div>
@@ -168,8 +156,8 @@ THE SOFTWARE.
                             <div class="col-md-12">
                                 <p></p>
                                 <form class="navbar-form navbar-right" role="form" action="Controller" method="post" id="empresaForm">
-                                    <input id="inputFiltervalueClient" class="form-control" name="filtervalue" type="text" size="20" maxlength="50" value="" width="100" style="width: 140px" placeholder="Valor" ng-model="clientFilterText">
-                                    <input type="submit" class="btn" id="btnFiltrarClient" name="btnFiltrarClient" value="Filtrar" ng-click="doClientFilter()">
+                                    <input id="inputFiltervalue" class="form-control" name="filtervalue" type="text" size="20" maxlength="50" value="" width="100" style="width: 140px" placeholder="Valor" ng-model="clientFilterText">
+                                   <!--<input type="submit" class="btn" id="btnFiltrarClient" name="btnFiltrarClient" value="Filtrar" ng-click="dofilter()">-->
                                 </form>
                                 <p></p>
                             </div>
@@ -218,11 +206,11 @@ THE SOFTWARE.
                         <a ng-show="visibles.telefono" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=desc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-down"></i></a>
                     </th>
 
-                    <th>Acciones</th>
+                    <th>Mantenimiento</th>
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="obj in page">
+                <tr ng-repeat="obj in page |filter:clientFilterText">
                     <td ng-show="visibles.id"  class="text-right">{{obj.id}}</td>
                     <td ng-show="visibles.nombre">{{obj.nombre}}</td>
                     <td ng-show="visibles.cif">{{obj.cif}}</td>
